# cranelift-to-sierra

./: Cargo.toml  README.md  example.clif
sample/: Cargo.toml
sample/src/: lib.rs
src/: main.rs
