[package]
name = "cranelift_to_sierra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-lang-sierra = "2.6.4"
cranelift = "0.109.0"
cranelift-codegen = "0.109.0"
cranelift-frontend = "0.109.0"
cranelift-native = "0.109.0"
cranelift-reader = "0.109.0"
itertools = "0.13.0"
smol_str = "0.2.2"
salsa = "0.16.1"
num-bigint = "0.4.6"
