cargo-features = ["codegen-backend", "profile-rustflags"]

[package]
name = "sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[unstable]
codegen-backend = true

[profile.release]
rustflags = ["-Csave-temps"]
codegen-backend = "cranelift"
panic = "abort"

[dependencies]
